--- a/src/app/components/main/profile/profile.component.html
+++ b/src/app/components/main/profile/profile.component.html
@@ -1,55 +1,68 @@
 <div class="perfil-container">
-     
-    <div class="perfil-info">
-      <img src="../../../../assets/perfildefault.webp" alt="Foto de perfil">
-      <h1>{{nombresCompletos}}</h1>
-      <p>Usuario: @{{ usuario }}</p>
-      <p>Seguidores: 100 | Siguiendo: 50</p>
-      <button (click)="compartir()">Compartir</button>
-      <button (click)="abrirFormularioEdicion()">Editar Perfil</button>
-    </div>
-  
-    <ng-container *ngIf="mostrarFormulario; else mostrarInfoPerfil">
+
+  <div class="perfil-info">
+    <img src="../../../../assets/perfildefault.webp" alt="Foto de perfil">
+    <h1>{{nombresCompletos}}</h1>
+    <p>Seguidores: {{cantidadSeguidores}} | Siguiendo: {{cantidadSeguidos}}</p>
+    <button (click)="compartir()">Compartir</button>
+    <button (click)="abrirFormularioEdicion()" *ngIf="permitirEditar">Editar Perfil</button>
+    <button 
+      (click)="seguir()" 
+      *ngIf="!permitirEditar"
+      [ngClass]="permitirSeguir ? 'seguir' : 'siguiendo'"
+    >{{permitirSeguir ? 'Seguir' : 'Siguiendo'}}</button>
+  </div>
+
+  <ng-container *ngIf="mostrarFormulario && permitirEditar; else mostrarInfoPerfil">
     <!-- Suponiendo que este es parte de tu componente de perfil -->
     <div class="formulario-edicion">
-        <label for="nuevoNombre">Nuevo Nombre:</label>
-        <input type="text" id="nuevoNombre" [(ngModel)]="nuevoNombre" required>
+      <label for="nuevoNombre">Nuevo Nombre:</label>
+      <input type="text" id="nuevoNombre" [(ngModel)]="nuevoNombre" required>
 
-        <label for="nuevoApellido">Nuevo Apellido:</label>
-        <input type="text" id="nuevoApellido" [(ngModel)]="nuevoApellido" required>
+      <label for="nuevoApellido">Nuevo Apellido:</label>
+      <input type="text" id="nuevoApellido" [(ngModel)]="nuevoApellido" required>
 
-        <label for="nuevoUsuario">Nuevo Usuario:</label>
-        <input type="text" id="nuevoUsuario" [(ngModel)]="nuevoUsuario" required>
+      <label for="nuevoUsuario">Nuevo Usuario:</label>
+      <input type="text" id="nuevoUsuario" [(ngModel)]="nuevoUsuario" required>
 
-        <label for="foto">Foto de perfil:</label>
-        <input type="file" id="foto" (change)="cargarNuevaFoto($event)">
+      <label for="foto">Foto de perfil:</label>
+      <input type="file" id="foto" (change)="cargarNuevaFoto($event)">
 
-        <div class="botones-container">
-            <button (click)="guardarCambios()">Guardar Cambios</button>
-            <button (click)="cerrarFormularioEdicion()">Cancelar</button>
-        </div>
+      <div class="botones-container">
+        <button (click)="guardarCambios()">Guardar Cambios</button>
+        <button (click)="cerrarFormularioEdicion()">Cancelar</button>
+      </div>
     </div>
 
-    </ng-container>
-  
-    
-    <ng-template #mostrarInfoPerfil>
-      
-      <div class="pestañas-container">
-        <div class="pestaña-creado" (click)="mostrarPestana('creado')" [class.selected]="pestanaActual === 'creado'">
-          <h2>Creado</h2>
-        </div>
-        <div class="pestaña-guardado" (click)="mostrarPestana('guardado')" [class.selected]="pestanaActual === 'guardado'">
-          <h2>Guardado</h2>
-        </div>
-      </div>
-  
+  </ng-container>
 
-      <div class="contenido-pestaña">
-        <div *ngIf="pestanaActual === 'creado'" class="fotos-creadas-container">
-          <img *ngFor="let foto of fotosCreadas" [src]="'../../../../assets//img/' + foto" alt="Fotos Creadas" class="foto-creada">
-        </div>
-        <div *ngIf="pestanaActual === 'guardado'">
-        </div> 
+
+  <ng-template #mostrarInfoPerfil>
+
+    <mat-progress-spinner *ngIf="loading" mode="indeterminate"></mat-progress-spinner>
+    <div class="pestañas-container">
+      <div class="pestaña-creado" (click)="mostrarPestana('creado')" [class.selected]="pestanaActual === 'creado'">
+        <h2>Creado</h2>
       </div>
-    </ng-template>
+      <div class="pestaña-guardado" (click)="mostrarPestana('guardado')"
+        [class.selected]="pestanaActual === 'guardado'">
+        <h2>Guardado</h2>
+      </div>
+    </div>
+
+
+    <div class="contenido-pestaña">
+      <div *ngIf="pestanaActual === 'creado'" class="grid-container">
+        <!--Post creados del usuario-->
+        <div *ngFor="let post of userPosts" class="post" (click)="viewDetails(post)">
+          <img alt="Post image" src="data:image/jpeg;base64,{{post.imagen}}" class="post-image">
+        </div>
+      </div>
+      <div *ngIf="pestanaActual === 'guardado'" class="grid-container">
+        <!--Post guardados por el usuario-->
+        <div *ngFor="let post of savedPosts" class="post" (click)="viewDetails(post)">
+          <img alt="Post image" src="data:image/jpeg;base64,{{post.imagen}}" class="post-image">
+        </div>
+      </div>
+    </div>
+  </ng-template>
