--- a/src/app/components/authentication/singin/singin.component.html
+++ b/src/app/components/authentication/singin/singin.component.html
@@ -1,41 +1,34 @@
-<div class="background">
-    <!-- Columna 1 -->
+<!-- <div class="background">
     <div class="image-column">
         <div class="image-rect" style="background-image: url('../../../assets/img/img1.jpg');"></div>
         <div class="image-rect" style="background-image: url('../../../assets/img/img2.jpg');"></div>
         <div class="image-rect" style="background-image: url('../../../assets/img/img3.jpg');"></div>
     </div>
-    <!-- Columna 2 -->
     <div class="image-column">
         <div class="image-rect" style="background-image: url('../../../assets/img/img5.jpg');"></div>
         <div class="image-rect" style="background-image: url('../../../assets/img/img6.jpg');"></div>
         <div class="image-rect" style="background-image: url('../../../assets/img/img7.jpg');"></div>
     </div>
-    <!-- Columna 3 -->
     <div class="image-column">
       <div class="image-rect" style="background-image: url('../../../assets/img/img8.jpg');"></div>
       <div class="image-rect" style="background-image: url('../../../assets/img/img9.jpg');"></div>
       <div class="image-rect" style="background-image: url('../../../assets/img/img10.jpg');"></div>
   </div>
-  <!-- Columna 4 -->
   <div class="image-column">
       <div class="image-rect" style="background-image: url('../../../assets/img/img4.jpg');"></div>
       <div class="image-rect" style="background-image: url('../../../assets/img/img11.jpg');"></div>
       <div class="image-rect" style="background-image: url('../../../assets/img/img12.jpg');"></div>
   </div>
-  <!-- Columna 5 -->
   <div class="image-column">
     <div class="image-rect" style="background-image: url('../../../assets/img/img13.jpg');"></div>
     <div class="image-rect" style="background-image: url('../../../assets/img/img14.jpg');"></div>
     <div class="image-rect" style="background-image: url('../../../assets/img/img15.jpg');"></div>
   </div>
-  <!-- Columna 6 -->
   <div class="image-column">
     <div class="image-rect" style="background-image: url('../../../assets/img/img16.jpg');"></div>
     <div class="image-rect" style="background-image: url('../../../assets/img/img17.jpg');"></div>
     <div class="image-rect" style="background-image: url('../../../assets/img/img18.jpg');"></div>
   </div>
-  <!-- Columna 7 -->
   <div class="image-column">
   <div class="image-rect" style="background-image: url('../../../assets/img/img19.jpg');"></div>
   <div class="image-rect" style="background-image: url('../../../assets/img/img20.jpg');"></div>
@@ -43,7 +36,7 @@
   </div>
   
   </div>
-  
+   -->
   
   <div class="overlay"></div>
   
@@ -52,16 +45,16 @@
     <img src="../../../assets/logo-small.svg" alt="Logo" class="form-logo">
     <h2>Bienvenido a Flavorist</h2>
 
-    <form [formGroup]="form" (ngSubmit)="iniciarSesion()">
-        <mat-form-field appearance="fill">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Tu email" class="rounded-input" formControlName="email">
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-            <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" placeholder="Tu contraseña" class="rounded-input" formControlName="password">
-        </mat-form-field>
+    <form [formGroup]="loginForm" (ngSubmit)="iniciarSesion()">
+        <mat-form-field>
+            <mat-label>Correo</mat-label>
+            <input matInput formControlName="correo" required type="email">
+          </mat-form-field>
+      
+          <mat-form-field>
+            <mat-label>Contraseña</mat-label>
+            <input matInput formControlName="password" required type="password">
+          </mat-form-field>
 
         <button type="submit" class="continue-btn">Iniciar Sesion</button>
         <p class="or-separator">o</p>
