--- a/src/app/components/main/post-details/post-details.component.css
+++ b/src/app/components/main/post-details/post-details.component.css
@@ -1,7 +1,22 @@
 .post-container {
     display: flex;
-    max-width: 800px;
-    min-height: 500px; /* Establece un mínimo de altura para el contenedor */
+    max-width: 80vw;
+    min-width: 80vw;
+    min-height: 200px; /* Establece un mínimo de altura para el contenedor */
+    max-height: 100vh;
+    margin: 20px auto;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    align-items: stretch; /* Asegura que los hijos se estiren para llenar el contenedor */
+}
+.comment-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 80vw;
+    min-height: 200px; /* Establece un mínimo de altura para el contenedor */
     margin: 20px auto;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -15,6 +30,14 @@
     display: flex;
     width: 100%;
     height: 100%; 
+}
+
+.post-comment{
+    display: flex;
+    width: 80vw;
+    height: 100%; 
+    border-radius: 10px;
+    border: 1px solid #241f1f;
 }
 
 .post-image-container {
@@ -131,7 +154,6 @@
 }
 
 .comment-input {
-    width: calc(100% - 110px); /* Ajustar el ancho para dejar espacio al botón */
     margin-right: 10px; /* Espacio entre el input y el botón */
     padding: 10px;
     border: 1px solid #ddd;
@@ -142,11 +164,9 @@
 }
 
 .comment-button {
-    padding: 10px 20px;
     background-color: #FF3911;
     color: white;
     border: none;
-    border-radius: 4px;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     cursor: pointer;
@@ -170,9 +190,50 @@
 }
 
 .comment {
-    background-color: #f9f9f9;
-    padding: 10px;
     margin-top: 10px;
-    border-radius: 4px;
+    padding: 10px;
+    width: 80vw;
+    height: 5vh;
     font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+}
+
+.likes-counter-liked{
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    color: #f34433;
+    user-select: none;
+    cursor: pointer;
+}
+.likes-counter-unliked{
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    color: #243644;
+    user-select: none;
+    cursor: pointer;
+}
+
+.post-author{
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    color: #243644;
+    user-select: none;
+    cursor: pointer;
+}
+
+.pills {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    color: white;
+    user-select: none;
+    background: #f34433;
+    border-radius: 20px;
+    padding: 7px;
+    margin: 5px; /* Este margen se aplica a todos los lados */
+    display: inline-block; /* O flex si estás utilizando flexbox */
+    /* Agrega margen adicional si es necesario */
+    margin-right: 10px; /* Espacio adicional a la derecha */
+    margin-left: 10px; /* Espacio adicional a la izquierda */
 }
