--- a/src/app/components/main/profile/profile.component.css
+++ b/src/app/components/main/profile/profile.component.css
@@ -245,3 +245,82 @@
         margin: 10px auto;
     }
 }
+
+.post {
+  position: relative;
+  width: 15vw;
+  height: 20vw;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  padding: 10px;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden; /* Para mantener todo dentro de los bordes redondeados */
+  transition: all 0.3s ease;
+
+}
+
+.post > img {
+  width: 15vw;  /* ajustado para ocupar todo el ancho del padre */
+  height: 20vw; /* ajustado para ocupar todo el alto del padre */
+  object-fit: cover;
+  object-position: center;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.post > img:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.options {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;  /* ajustado para ocupar todo el ancho del padre */
+  height: 100%; /* ajustado para ocupar todo el alto del padre */
+  object-fit: cover;
+  object-position: center;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: rgba(56, 56, 56, 0.5); /* Transparencia roja */
+  z-index: 1000;
+  display: none; /* Opcional: ocultar por defecto y mostrar en hover */
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: block;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(15%, 1fr));
+  grid-auto-rows: auto;
+}
+.seguir{
+  background-color: #FF3911;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 10px;
+}
+.siguiendo{
+  background-color: #c7c7c7;
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 10px;
+}
