--- a/src/app/components/main/post-details/post-details.component.html
+++ b/src/app/components/main/post-details/post-details.component.html
@@ -45,9 +45,12 @@
         </div>
     </div>
 </div>
-<div class="pasos-container">
-    <div *ngFor="pasos">
-
+<div class="comment-container">
+    <h1>Pasos</h1>
+    <div *ngFor="let paso of this.post.recetaPasos" class="comment" style="text-align: left;">
+        <h1>
+            {{ paso.orden }}. {{ paso.descripcion }}
+        </h1>
     </div>
 </div>
 <div class="comment-container" *ngIf="!cargandoComentarios">
