--- a/src/app/components/authentication/singin/singin.component.html
+++ b/src/app/components/authentication/singin/singin.component.html
@@ -59,5 +59,7 @@
         <button type="submit" class="continue-btn">Iniciar Sesion</button>
         <p class="or-separator">o</p>
         <button type="button" class="google-btn" (click)="setRegister()">Registrate</button>
+        <p class="or-separator">-</p>
+        <button type="button" class="google-btn" (click)="setForgot()">Olvide mi contraseña</button>
     </form>
 </div>
